# CoCa-pytorch

./: Dockerfile.app  Dockerfile.db  README.md  docker-compose.yml  pyproject.toml  python-publish.yaml  requirements.txt  setup.py
.github/workflows/: ci.yml
_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/.doctrees/: environment.pickle  index.doctree
_build/_sources/: index.rst.txt
_build/_static/: documentation_options.js
coca_pytorch/: __init__.py  coca_pytorch.py
db/: README.md
source/: conf.py
src/: README.md  __init__.py
